# Turing-College

./: First test.py  Lesson 1Building Foundational Python Skills for Data Analytics part1.py  PROJECT1.py  README.md  calculator_test.py  capstone.html  capstone.ipynb  project3.html  project3.ipynb  project_gytis.html  project_spotify_gyse.ipynb  quadratic.py  readme.md  setup.py  streamlit.py  test.py  test2.py  test_quadratic.py
Archive/: project_gytis.ipynb  project_review.py  project_spotify_gyse.html  pypirc  readme.md  test.py  test2.py  visualization.ipynb
GYS_PACKAGE/: .pypirc  LICENSE  README.md  calculator.py  pyproject.toml  read.me  setup.py
Module 1 Sprint 1 Part 2/: Collections.deque().py  Lesson 3Improving Reliability with MyPy and Type Hinting part1.py
Module 1 Sprint 1 Part 3/: Lesson 6 Applying Cluster Analysis to a Real Dataset part 1 and part 2.py  Lesson 7 Gearing-up for a Publisher Subscriber Application part 1 and part 2.py  Lesson 8 Implementing a Publisher Subscriber Application part 1 and part 2.py
Module 1 Sprint 1 Part 4/: Lesson 10 Building a Web Application for the PubSub Service part 1 and part 2.py  Lesson 11 Testing with PyTest, Itertools, Hypothesis, Pyflakes, MyPy and Data Validators.py  Lesson 9 Using Bottle to Build REST APIs and Web Applications part 1 and part 2.py
Module 1 Sprint 2/: clean-code-python.py
Module 1 Sprint 2 Part 1/: Introduction to NumPy.py
packaging/: README.md  calculator_test.py  pyproject.toml
packaging/src/package_gyse3054/: calculator.py
packaging/tests/: calculator_test.py
(+27 files in other folders)
