[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_gyse3054"
version = "0.0.1"
authors = [
  { name="Gytis Semenas", email="gytisse@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gyse3054/Turing-College"
"Bug Tracker" = "https://github.com/gyse3054/Turing-College"
